# atlas-nis2-intake-engine

./: .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  assess.py  atlas_engagement_cockpit.html  atlas_nis2_intake.html  criteria.py  economics.py  jurisdiction.py  pyproject.toml  requirements.txt  scope.py  server.py  test_assess.py  test_scope.py
.claude/: launch.json
.github/workflows/: ci.yml
atlas/: __init__.py  economics.py  jurisdiction.py  service.py
atlas/api/: __init__.py  main.py
atlas/engine/: __init__.py  baseline.py  classify.py  coverage.py  models.py  proportionality.py  ruleset.py  scoring.py  snapshot.py  validate.py  veto.py
atlas/extraction/: __init__.py  extract.py  ingest.py
eval/: __init__.py  run_coverage.py  run_eval.py
eval/extraction_cases/: rm21d_01_design_policy.json  rm21d_01_negative_unrelated.json  rm21d_01_operating_register.json
frontend/: index.html
ruleset/: nis2_v1.yaml  supply_chain_controls_21D.yaml
tests/: test_api.py  test_baseline.py  test_classify.py  test_coverage.py  test_determinism.py  test_economics.py  test_eval.py  test_extraction.py  test_jurisdiction.py  test_jurisdiction_freshness.py  test_proportionality.py  test_scoring.py  test_validation.py  test_veto.py  test_veto_area.py
tests/fixtures/: mock2_rm21d_facts.json
